--- a/trips/static/trips/css/star-rating.css
+++ b/trips/static/trips/css/star-rating.css
@@ -40,6 +40,7 @@ https://stackoverflow.com/questions/53055930/hover-with-star-rating-not-working-
 
 /* Click + hover color */
 .fa-star,
+.fa-star-half,
 input:checked ~ label,
 label:hover, label:hover ~ label { 
     color: #ffb503;  
