--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_title %} Error {% endblock %}
+{% block extra_title %} 500 Error {% endblock %}
 
 {% block extra_css %}
     
@@ -11,8 +11,8 @@
 <section class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col error-500 text-center">
-                <h1>Something has gone wrong, while we are looking into it....</h1>
+            <div class="col error-500 text-center text-white">
+                <h1 class="mt-4">Something has gone wrong, while we are looking into it....</h1>
                 <a href="{% url 'home' %}" class="btn btn-dropdown">Go Back</a>
             </div>
         </div>
