--- a/accounts/templates/accounts/view_reviews.html
+++ b/accounts/templates/accounts/view_reviews.html
@@ -72,9 +72,7 @@
                         <div class="row">
                             {% if user == review.user %}
                             <div class="col text-end">
-                                <a href="{% url 'delete_review' review.id %}" class="remove-item btn">
-                                    <small><i class="fas fa-trash" aria-hidden="true"></i> Delete</small>
-                                </a>
+                                {% include 'trips/includes/delete-modal-review.html' %}
                                 <a href="{% url 'edit_review' review.id %}" class="btn update-link">
                                     <small>Edit <i class="fas fa-sync" aria-hidden="true"></i></small>
                                 </a>
