--- a/static/css/base.css
+++ b/static/css/base.css
@@ -166,9 +166,13 @@ header,
 
 /***********************Trips Page*/
 
-.heading {
+/* .heading {
     margin-top: 2rem;
     margin-bottom: 1rem;
+} */
+
+.container {
+    margin-top: 4rem;
 }
 
 .main-content {
@@ -178,10 +182,10 @@ header,
     flex: 1 0 auto;
 }
 
-.search-btn {
+/* .search-btn {
     background-color: #000000;
     color: #fafafa;
-}
+} */
 
 .search-btn:hover,
 .btn-dropdown:hover {
@@ -199,19 +203,19 @@ header,
     width: 15rem;
 }
 
-.dropdown-item:hover {
+/* .dropdown-item:hover {
     background-color: rgba(97, 95, 95, 0.6);
     border-radius: 5%;
     padding: 1rem;
     transition: ease-in-out all .2s;
     -moz-transition: ease-in-out all .2s;
     -webkit-transition: ease-in-out all .2s;
-}
+} */
 
-.sort-div {
+/* .sort-div {
     display: flex;
     justify-content: end;
-}
+} */
 
 .btn-bottom {
     position: absolute;
@@ -223,13 +227,13 @@ header,
     display: block;
 }
 
-.card-body .list-group-item {
+/* .card-body .list-group-item {
     border: none;
 }
 
 .card-body .list-group {
     flex-direction: unset;
-}
+} */
 
 .add-to-favourites i {
     font-size: 2rem;
@@ -252,7 +256,7 @@ header,
     color: #ef1018;
 }
 
-.pagination {
+/* .pagination {
     background-color: #fafafa;
     font-size: 1rem;
     margin-top: 2rem;
@@ -264,9 +268,9 @@ header,
 
 .pagination-section {
     height: fit-content;
-}
+} */
 
-.short-description {
+/* .short-description {
     height: 10rem;
     overflow: auto;
     scroll-behavior: smooth;
@@ -281,9 +285,9 @@ header,
 
 .card-body p {
     font-size: 1rem;
-}
+} */
 
-.card-body a {
+/* .card-body a {
     color: #000000;
     text-decoration: none;
 }
@@ -311,7 +315,7 @@ header,
 .page-item.active .page-link {
     background-color: #000000;
     border-color: #000000;
-}
+} */
 
 /***********************Trip Details*/
 
@@ -377,9 +381,9 @@ font-family: 'Oxygen', sans-seri  - paragraphs */
     color: #fafafa;
 }
 
-.list-group-item {
+/* .list-group-item {
     border: none;
-}
+} */
 
 .modal-header {
     background-color: #da8925;
@@ -661,9 +665,9 @@ footer {
 
 /* Slightly larger container on xl screens */
 @media (max-width: 1200px) {
-    .card-trip {
+    /* .card-trip {
         height: 48rem;
-    }
+    } */
 
     .update-link,
     .remove-item {
@@ -682,9 +686,9 @@ footer {
         padding: 0px;
     }
 
-    .review-card {
+    /* .review-card {
         height: 20rem !important;
-    }
+    } */
 
     .btn-dropdown {
         width: auto;
@@ -694,19 +698,19 @@ footer {
         padding-left: 10px;
     }
 
-    .sort-div {
+    /* .sort-div {
         display: block;
-    }
+    } */
 
     .main-nav {
         width: auto !important;
     }
 
-    .card-trip {
+    /* .card-trip {
         margin: 0;
         width: 270px;
         margin-top: 2rem;
-    }
+    } */
 
 }
 
@@ -716,7 +720,7 @@ footer {
         height: 15vh;
     }
 
-    .sort-div {
+    /* .sort-div {
         display: block;
     }
 
@@ -726,7 +730,7 @@ footer {
 
     .result-count {
         font-size: 1rem;
-    }
+    } */
 
     .main-nav {
         width: auto !important;
