Added link to trips app static files

--- a/accounts/templates/accounts/favourites.html
+++ b/accounts/templates/accounts/favourites.html
@@ -3,6 +3,10 @@
 
 {% block extra_title %} Favourites {% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'trips/css/trips.css' %}">
+{% endblock %}
+
 {% block content %}
 
 <section class="main-content">
