--- a/accounts/templates/accounts/edit_review.html
+++ b/accounts/templates/accounts/edit_review.html
@@ -3,6 +3,11 @@
 
 {% block extra_title %} Edit Review {% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'trips/css/trips.css' %}">
+    <link rel="stylesheet" href="{% static 'trips/css/star-rating.css' %}">
+{% endblock %}
+
 {% block content %}
 
 <section class="main-content">
