--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -1,4 +1,4 @@
-<ul class="mobile-icon-menu d-flex">
+<ul class="mobile-icon-menu d-flex m-0">
     <!--Profile-->
     <li class="nav-item dropdown list-inline-item nav-item">
         <a class="nav-link dropdown-toggle text-white d-block d-lg-none" href="#" id="navbarDropdownMenuLink4"
