Added a span element which will add the year using JavaScript

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -37,7 +37,9 @@
     <!--Copy Rights-->
     <div class="row pb-1">
         <div class="col text-center copy-rights">
-            <span class="copy-rights-text">&copy; 2021 Discover Malta</span>
+            <!-- Year added by javascript -->
+            <small class="copy-rights-text">&copy; Discover Malta <span id="copyright-year"></span>
+            </small>
         </div>
     </div>
 </footer>
