--- a/templates/base.html
+++ b/templates/base.html
@@ -233,6 +233,15 @@
         let bsToast = new bootstrap.Toast(toastEl, option);
         bsToast.show();
         });
+
+         /**Code for this function has been sourced from 
+          * https://www.codegrepper.com/code-examples/javascript/auto+update+copyright+year+html
+         */
+        // Sets copyright date in footer to current year
+        function getCurrentYear() {
+            return new Date().getFullYear();
+        };
+        document.getElementById("copyright-year").innerHTML = getCurrentYear(); 
     </script>
 
     {% endblock %}
