Added fade-out class to carousel item and data-bs-touch attribut

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col">
                 <!---carousel-->
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="true">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="https://cdn.pixabay.com/photo/2017/05/20/21/03/catamaran-2329770_1280.jpg"
