--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -170,7 +170,7 @@
                                 <p>
                                     <i class="fas fa-child d-block" aria-hidden="true"></i>
                                     <span class="sr-only">family friendly</span>
-                                    Family
+                                    Family Friendly
                                 </p>
                                 {% endif %}
                             </div>
@@ -185,9 +185,8 @@
                                 {% include 'trips/includes/delete-modal-trip.html' %}
                                 <!--Update Link-->
                                 <a href="{% url 'update_trip' trip.id %}" class="d-inline btn update-link m-1">
-                                    <i class="fas fa-sync" aria-hidden="true"></i>
+                                    Update <i class="fas fa-sync" aria-hidden="true"></i>
                                     <span class="sr-only">update</span>
-                                    Update
                                 </a>
                                 {% endif %}
                                 <!--Link to Trip Details-->
