--- a/trips/templates/trips/add_trip.html
+++ b/trips/templates/trips/add_trip.html
@@ -6,6 +6,7 @@
 {% block content %}
 <section class="main-content">
     <div class="container">
+      {% if user.is_superadmin %}
         <div class="row justify-content-center">
             <div class="col-md-auto mt-3">
                 <h2>Trip Managment</h2>
@@ -115,6 +116,19 @@
                 </form>
             </div>
         </div>
+      {% else %}
+      <div class="row">
+        <div class="col text-center mt-5">
+          <h4>You do not have permission to access this page!</h4>
+        </div>
+      </div>
+      <!--Button to return to all trips-->
+      <div class="row mt-2">
+        <div class="col text-center">
+          <a href="{% url 'trips' %}" class="btn-next btn">Go back to All Trips</a>
+        </div>
+      </div>
+      {% endif %}
     </div>
 </section>
 
