--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -5,64 +5,75 @@
 
 {% block content %}
 <section class="main-content">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-auto mt-3 text-center">
-        <h2>Get In Touch</h2>
-        <p>Please do not hesitate to get in touch with us! Our friendly team will be happy to help!</p>
-      </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-auto mt-3 text-center">
+                <h2>Get In Touch</h2>
+                <p>Please do not hesitate to get in touch with us! Our friendly team will be happy to help!</p>
+            </div>
+        </div>
+        <!--Contact Form-->
+        <div class="row justify-content-md-center mb-1 mt-4 p-1">
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <form class="row g-3 login-form" action="{% url 'contact' %}" method="POST">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col mt-2">
+                            <label for="exampleDataList" class="form-label">Choose Subject</label>
+                            <input class="form-control" list="datalistOptions" id="exampleDataList"
+                                placeholder="Select one..." name="subject">
+                            <datalist id="datalistOptions">
+                                <option value="General Enquire">
+                                <option value="I need to cancel my trip">
+                                <option value="Enquire regarding my purchase">
+                                <option value="I did not recieve a confirmation email">
+                                <option value="Collaboration">
+                                <option value="Other">
+                            </datalist>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="full_name">Full Name:</label>
+                        <input type="text" class="form-control" name="full_name" id="full_name" minlength="4"
+                            maxlength="20"
+                            value="{% if user.is_authenticated %} {{user.first_name|capfirst}} {{user.last_name|capfirst}} {% endif %}"
+                            required pattern="^[a-z A-Z]{4,20}$" oninput="this.setCustomValidity('')"
+                            oninvalid="this.setCustomValidity('Please enter your name')" />
+                    </div>
+                    <div class="col-md-6">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            name="email" value="{% if user.is_authenticated %} {{user.email}} {% endif %}"
+                            pattern="^[a-zA-Z0-9!?.@]{5,20}$" required oninput="this.setCustomValidity('')"
+                            oninvalid="this.setCustomValidity('Please enter a valid email address')" />
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label for="message">Your Message</label>
+                            <textarea class="form-control" aria-label="With textarea" minlength="20" maxlength="500"
+                                name="message" id="message" oninput="this.setCustomValidity('')"
+                                oninvalid="this.setCustomValidity('Please enter at least 20 characters')" required>
+                    </textarea>
+                        </div>
+                    </div>
+                    <div class="col text-center">
+                        <!--Print Form Errors-->
+                        {{ form.non_field_errors }}
+                        <button type="submit" class="btn btn-next w-50">Submit
+                            <i class="fas fa-envelope" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!--Link to login page-->
+        <div class="row">
+            <div class="col text-center mt-3">
+                <a class="btn btn-dropdown d-inline" href="{% url 'home' %}">Go Back</a>
+            </div>
+        </div>
     </div>
-    <!--Contact Form-->
-    <div class="row justify-content-md-center mb-1 mt-4 p-1">
-      <div class="col-lg-8 col-md-8 col-sm-12">
-        <form class="row g-3 login-form" action="{% url 'contact' %}" method="POST">
-          {% csrf_token %}
-          <div class="row">
-              <div class="col">
-                  <label for="exampleDataList" class="form-label">Choose Subject</label>
-                  <input class="form-control" list="datalistOptions" id="exampleDataList"
-                      placeholder="Select one..." name="subject">
-                  <datalist id="datalistOptions">
-                      <option value="General Enquire">
-                      <option value="I need to cancel my trip">
-                      <option value="Enquire regarding my purchase">
-                      <option value="I did not recieve a confirmation email">
-                      <option value="Collaboration">
-                      <option value="Other">
-                  </datalist>
-              </div>
-          </div>
-          <div class="col-md-6">
-            <label for="full_name" class="form-label">Full Name:</label>
-            <input type="full_name" class="form-control" id="full_name" minlength="4" maxlength="20" required>
-          </div>
-          <div class="col-md-6">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-          </div>
-          <div class="row">
-              <div class="col form-floating">
-                  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"
-                      required>Comment</textarea>
-              </div>
-          </div>
-          <div class="col">
-            <!--Print Form Errors-->
-            {{ form.non_field_errors }}
-            <button type="submit" class="btn btn-next w-100">Register</button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <!--Link to login page-->
-    <div class="row">
-      <div class="col text-center mt-3">
-        <p class="d-inline"> Already registered ?</p>
-        <a class="btn btn-dropdown d-inline" href="{% url 'login' %}">Login</a>
-      </div>
-    </div>
-  </div>
 </section>
 
 
