Added a link to the contact page

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,6 +1,11 @@
 <footer class="container-fluid">
     <div class="row mt-1">
-        <div class="col text-center mt-1">
+        <div class="col-4 text-center mt-1">
+            <a class="logo-font nav-item font-weight-bold nav-link text-white mr-5" href="{% url 'contact' %}">
+                Contact
+              </a>
+        </div>
+        <div class="col-4 text-center mt-1">
             <p class="text-white">Follow Us</p>
         </div>
     </div>
