Added custom validation to input fields

--- a/accounts/templates/accounts/reset_password.html
+++ b/accounts/templates/accounts/reset_password.html
@@ -18,11 +18,17 @@
           {% csrf_token %}
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Create Password:</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="password-1">
+            <input type="password" class="form-control" id="exampleInputPassword1" name="password-1"
+            pattern="^[a-zA-Z0-9!?]{5,10}$" required minlength="8"
+            oninput="this.setCustomValidity('')"
+            oninvalid="this.setCustomValidity('Please enter password which is at least 8 characters long')">
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword2" class="form-label">Confirm Password:</label>
-            <input type="password" class="form-control" id="exampleInputPassword2" name="password-2">
+            <input type="password" class="form-control" id="exampleInputPassword2" name="password-2"
+            pattern="^[a-zA-Z0-9!?]{5,10}$" required minlength="8"
+            oninput="this.setCustomValidity('')"
+            oninvalid="this.setCustomValidity('Please ensure your passwords match')">
           </div>
           <div class="mb-3">
             <button type="submit" class="btn btn-next w-100">Reset</button>
