--- a/checkout/templates/checkout/checkout_complete.html
+++ b/checkout/templates/checkout/checkout_complete.html
@@ -218,7 +218,7 @@
         </div>
         <!--Profile link-->
         <div class="row">
-            <div class="col-12 col-lg-7 text-right">
+            <div class="col-12 text-center">
                 {% if from_profile %}
                 <!--User is viewing past order history-->
                 <a href="{% url 'profile' %}" class="btn btn-next">
