--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -103,7 +103,8 @@
                             <!--Links to login/register-->
                             <p>
                                <a class="trip-link" href="{% url 'register' %}"><strong>Register</strong></a> or
-                               <a class="trip-link"  href="{% url 'login' %}"><strong>Login</strong></a> to save this information
+                               <a class="trip-link"  href="{% url 'login' %}"><strong>Login</strong></a> 
+                               to save this information and view your order summary in your profile page
                             </p>
                             {% endif %}
                         </div>
