--- a/templates/404.html
+++ b/templates/404.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <section class="main-content">
-    <div class="container-fluid">
+    <div class="container-fluid error-container">
         <div class="row">
             <div class="col error text-center">
                 <h1 class="mt-4">The page you are trying to access does not exist!</h1>
