--- a/templates/500.html
+++ b/templates/500.html
@@ -9,10 +9,10 @@
 
 {% block content %}
 <section class="main-content">
-    <div class="container-fluid">
+    <div class="container-fluid error-container">
         <div class="row">
-            <div class="col error-500 text-center text-white">
-                <h1 class="mt-4">Something has gone wrong, while we are looking into it....</h1>
+            <div class="col error-500 text-center">
+                <h1 class="mt-4 text-white">Something has gone wrong, while we are looking into it....</h1>
                 <a href="{% url 'home' %}" class="btn btn-dropdown">Go Back</a>
             </div>
         </div>
