--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,9 +1,13 @@
 <footer class="container-fluid">
     <div class="row mt-1">
-        <div class="col-4 text-center mt-1">
-            <a class="logo-font nav-item font-weight-bold nav-link text-white mr-5" href="{% url 'contact' %}">
-                Contact
-              </a>
+        <div class="col-4 text-center mt-1 nav-item">
+            <ul class="navbar-nav nav-links-ul">
+                <li class="nav-item text-white">
+                    <a class="logo-font font-weight-bold nav-link text-white" href="{% url 'contact' %}">
+                        Contact
+                    </a>
+                </li>
+            </ul>
         </div>
         <div class="col-4 text-center mt-1">
             <p class="text-white">Follow Us</p>
