Updated the page title

--- a/checkout/templates/checkout/checkout_complete.html
+++ b/checkout/templates/checkout/checkout_complete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 
-{% block extra_title %} Checkout {% endblock %}
+{% block extra_title %} Checkout Complete {% endblock %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
